# VK_LakeHouse

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  team.params
configs/mapping/: apartments_apartments.toml  apartments_lite.toml  t_avito.toml  t_cian.toml  t_domclick.toml
coordination/: README.md
data-in/: apartments_3000.json  apartments_3000.xlsx  apartments_full.csv  apartments_sample.json
docs/: COMMANDS.md  DEMO.md  architecture.md  constitution.md  ops-journal.md
infra/minio/: bootstrap.sh
infra/postgres/init/: 01-iceberg-catalog.sql
infra/trino/: config.properties  gen-tls.sh  gen_password.py  jvm.config  password-authenticator.properties
infra/trino/catalog/: iceberg.properties
specs/001-lakehouse-infra/: audit.md  intent.md  plan.md  spec.md  state.md
specs/001-lakehouse-infra/reviews/: learnings.md  requirements-matrix.md  stage-1-creative.md  stage-2-audit.md  stage-3-dev.md  stage-4-quality.md
specs/002-universal-ingestion/: audit.md  intent.md  plan.md  spec.md  state.md
specs/002-universal-ingestion/reviews/: learnings.md  requirements-matrix.md  stage-1-creative.md  stage-2-audit.md  stage-3-dev.md  stage-4-quality.md
specs/003-silver-normalization/: audit.md  intent.md  plan.md  spec.md  state.md
specs/003-silver-normalization/reviews/: learnings.md  requirements-matrix.md  stage-1-creative.md  stage-2-audit.md  stage-3-dev.md  stage-4-quality.md
specs/004-gold-marts/: audit.md  intent.md  plan.md  spec.md  state.md
specs/004-gold-marts/reviews/: learnings.md  requirements-matrix.md  stage-1-creative.md  stage-2-audit.md  stage-3-dev.md  stage-4-quality.md
specs/005-grafana-dashboards/: audit.md  intent.md  plan.md  spec.md  state.md
specs/005-grafana-dashboards/reviews/: learnings.md  requirements-matrix.md  stage-1-creative.md  stage-2-audit.md  stage-4-quality.md
specs/006-ml-dataset-export/: audit.md  intent.md  plan.md  spec.md  state.md
specs/006-ml-dataset-export/reviews/: learnings.md  requirements-matrix.md  stage-1-creative.md  stage-2-audit.md  stage-3-dev.md  stage-4-quality.md
specs/007-loft-markers/: audit.md  plan.md  spec.md  state.md
specs/007-loft-markers/reviews/: learnings.md  (+5 more)
src/loftnav/: __init__.py  bootstrap.py  chunked_insert.py  cli.py  config.py  ident.py  quarantine.py  runlog.py  trino_client.py
tests/agent-evals/: .gitignore  README.md
tests/export/: conftest.py
tests/gold/: conftest.py
tests/grafana/: conftest.py
tests/ingestion/: conftest.py
tests/smoke/: conftest.py  test_stack_up.py
tests/transform/: conftest.py
(+66 files in other folders)
