[project]
name = "loftnav"
version = "0.2.0"
description = "LoftNavigator LakeHouse platform (feature 002 — universal ingestion)"
requires-python = ">=3.12"
dependencies = [
    "trino==0.338.0",
    "pandas==3.0.3",
    "openpyxl==3.1.5",
    "boto3==1.43.51",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.22",
    "bcrypt==5.0.0",
    # requests используется smoke (001) и integration-тестами напрямую — явный dev-пин
    # (в 001 доезжал транзитивно через trino-клиент, пробел закрыт здесь).
    "requests==2.34.2",
    # pyyaml — парсинг provisioning-YAML в secret/структурных unit-тестах grafana (005), test-only
    "pyyaml==6.0.2",
]

[project.scripts]
loftnav = "loftnav.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    # self-signed cert Trino на loopback (осознанно, verify=False) — не шумим в выводе гейта
    "ignore::urllib3.exceptions.InsecureRequestWarning",
]

[tool.ruff]
line-length = 100
# Явный exclude каталогов харнеса: гейт `ruff check .` не должен спотыкаться о будущие
# python-файлы харнеса, которые фича 001 не сопровождает (FR-011).
extend-exclude = [
    "scripts",
    "Product_agents",
    "coordination",
    ".githooks",
    "tests/agent-evals",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
